--- a/src/app/components/volunteering-domain/volunteering-domain.component.html
+++ b/src/app/components/volunteering-domain/volunteering-domain.component.html
@@ -12,17 +12,17 @@
             <option *ngFor="let item1 of item.volunteerDomain" (click)="selectDomain(item1.code_volunteering)">
               {{item1.description}}</option> -->
 
-            <select class="form-select form-control" (change)="selectDomain($event.target.value,item.domain)"
-              aria-label="Default select example">
-              <option [ngValue]="undefined" disabled selected>{{item.domain.description}} </option>
-              <option *ngFor="let item1 of item.volunteerDomain" value={{item1.code_volunteering}} >{{item1.description}}</option>
-            </select>
-            <!-- (selected)="ifExist(item1.code)" -->
+          <select class="form-select form-control" (change)="selectDomain($event.target.value,item.domain)"
+            aria-label="Default select example">
+            <option selected>{{item.domain.description}}</option>
+            <option *ngFor="let item1 of item.volunteerDomain" [value]="item1.code_volunteering">{{item1.description}}
+            </option>
+          </select>
         </div>
       </div>
     </div>
     <div class="button-wapper">
-      <button   type="submit" class="btn btn-dark btn-perple btn-lg">אישור </button>
+      <button type="submit" class="btn btn-dark btn-perple btn-lg">אישור </button>
     </div>
   </div>
 </form>
