--- a/src/app/components/assisted/assisted.component.html
+++ b/src/app/components/assisted/assisted.component.html
@@ -15,7 +15,7 @@
                 </div>
                 <input class="form-control" placeholder="תעודת זהות" type="text" #ngId="ngModel"
                     [(ngModel)]="Assisted.Assisted.id_assisted" name="id_assisted" id="id_assisted" required
-                    pattern="[0-9]*" maxlength="9" />
+                    pattern="[0-9]*" maxlength="9" minlength="9"/>
                 <div class="error" *ngIf="ngId.invalid&&(ngId.touched||ngId.dirty)">
                     <i *ngIf="ngId.errors!.required">שדה חובה</i>
                     <i *ngIf="ngId.errors!.pattern">שדה זה חייב להכיל מספרים בלבד</i>
@@ -198,7 +198,7 @@
         </table>
 
         <div class="button-wapper">
-
+            <!-- <button (click)="add()" *ngIf="this.mode=='register'" type="submit" class="btn btn-dark btn-perple btn-lg" data-toggle="modal" data-target="#myModal">רישום</button> -->
             <button (click)="add()" *ngIf="this.mode=='register'" type="submit" class="btn btn-dark btn-perple btn-lg">
                 רישום</button>
             <button (click)="add1()" *ngIf="this.mode=='update'" type="submit" class="btn btn-dark btn-perple btn-lg">
