--- a/src/app/components/schedule/schedule.component.html
+++ b/src/app/components/schedule/schedule.component.html
@@ -3,6 +3,7 @@
         <div>
             <a routerLink="/login">התנתק</a>
             <a *ngIf="this.userType=='volunteer'" routerLink="/volunteer/update">עדכון פרטי מתנדב</a>
+            <a *ngIf="this.userType=='volunteer'" (click)="getEmbeddings()">שיבוץ</a>
             <a *ngIf="this.userType=='assisted'" routerLink="/assisted/update">עדכון פרטי נעזר</a>
         </div>
     </div>
