--- a/src/app/components/app.component.html
+++ b/src/app/components/app.component.html
@@ -1,18 +1,17 @@
 <div class="wapper">
     <div class="maim-menu row ">
         <div class="header-img"></div>
-        <!-- <div class="col-10"> -->
+        <div class="col-10">
             <!-- <a routerLink="/assisted">נעזרים</a>
             <a routerLink="/volunteer" >מתנדבים</a> -->
             <!-- <a routerLink="/volunteering-domain">תחומי התנדבות</a> -->
-        <!-- </div> -->
+        </div>
         <div class="col-2">The Voluneers</div>
     </div>
 
     <!-- <a [routerLink]="login"></a> -->
-
-</div>
-<div class="main-container">
-    <router-outlet></router-outlet>
+    <div class="main-container">
+        <router-outlet></router-outlet>
+    </div>
 </div>
     
