--- a/src/app/components/schedule/schedule.component.css
+++ b/src/app/components/schedule/schedule.component.css
@@ -93,6 +93,7 @@
     border-color: gray;
     background-color:rgb(255, 186, 117);
     text-align: center;
+    margin-bottom: 10px;
 }
 .a4{
     color: #e65d13;
