--- a/src/app/components/app.component.css
+++ b/src/app/components/app.component.css
@@ -18,10 +18,11 @@
     margin: auto;
 }
 .main-container{
+    height: 100%;
     background-color: #5b2ea2 ;
     position: relative;
     width: 100vw;
-    padding-bottom: 1000px;
+    padding-bottom: 100px;
 }
 .header-img
 {
