--- a/src/app/components/volunteer/volunteer.component.html
+++ b/src/app/components/volunteer/volunteer.component.html
@@ -11,12 +11,12 @@
                 <!-- || ^[a-zA-Z ]*$" -->
                 <div class="error" *ngIf="ngFirstName.invalid&&(ngFirstName.touched||ngFirstName.dirty)">
                     <i *ngIf="ngFirstName.errors!.required"> שדה חובה</i>
-                    <!-- <i *ngIf="ngFirstName.errors!.pattern">שדה זה חייב להכיל אותיות בלבד</i> -->
+                    <i *ngIf="ngFirstName.errors!.pattern">שדה זה חייב להכיל אותיות בלבד</i>
                 </div>
                 <!-- <select class="form-select form-control" aria-label="Default select example"></select> -->
                 <input class="form-control" placeholder="מספר זהות" type="text" #ngId="ngModel"
                     [(ngModel)]="Volunteer.Volunteer.id_volunteer" name="id_volunteer" required pattern="[0-9]*"
-                    maxlength="9" minlength="9"/>
+                    maxlength="9" />
                 <div class="error" *ngIf="ngId.invalid&&(ngId.touched||ngId.dirty)">
                     <i *ngIf="ngId.errors!.required">שדה חובה</i>
                     <i *ngIf="ngId.errors!.pattern">שדה זה חייב להכיל מספרים בלבד</i>
@@ -42,7 +42,7 @@
                     pattern="/^[א-ת\s]+$/ " />
                 <div class="error" *ngIf="ngLastName.invalid&&(ngLastName.touched||ngLastName.dirty)">
                     <i *ngIf="ngLastName.errors!.required">שדה חובה</i>
-                    <!-- <i *ngIf="ngLastName.errors!.pattern">שדה זה חייב להכיל אותיות בלבד</i> -->
+                    <i *ngIf="ngLastName.errors!.pattern">שדה זה חייב להכיל אותיות בלבד</i>
                 </div>
                 <select class="form-select form-control" aria-label="Default select example" #ngList="ngModel"
                     [(ngModel)]="Volunteer.Volunteer.code_status" name="personalStatus">
