--- a/src/app/components/volunteering-domain/volunteering-domain.component.css
+++ b/src/app/components/volunteering-domain/volunteering-domain.component.css
@@ -57,8 +57,79 @@
 }
 .button-wapper{
     text-align: left;
-
 }
 .name{
     text-align: center;
+}
+/* new */
+.autocomplete {
+    position: relative;
+}
+
+.chips-input-container{
+  display: inline-flex;
+  border: 1px solid grey;
+  max-width: 375px;
+}
+
+input {
+  font-weight: 600;
+  border: none;
+  outline: none;
+  margin-left: 7px;
+}
+input:hover{
+  border:none;
+  border-radius: 0px;
+}
+
+.autocomplete-items {
+    /* position: absolute; */
+    border: 1px solid #d4d4d4;
+    border-radius: 4px;
+    /* margin-top: 15px; */
+    top: 100%;
+    left: 0;
+    right: 50%;
+    width: 377px;
+}
+
+.selected-suggestion{
+    background-color: #5b2ea2 !important; 
+    color: white;
+}
+
+.autocomplete-items div {
+    padding: 10px;
+    cursor: pointer;
+    background-color: #fff;
+    border-bottom: 1px solid #d4d4d41a;
+}
+
+.autocomplete-items div:hover {
+    background-color: #a695957a; 
+}
+
+.user-chip{
+  border: 1px solid;
+  background: grey;
+  padding: 4px;
+  border-radius: 10px;
+  width: fit-content;
+  text-align: center;
+  color: white;
+}
+
+.delete-icon-chip {
+    color: white;
+    opacity: 0.7;
+    cursor: pointer;
+    float: right;
+    position: relative;
+    right: 7px;
+    font-size: 12px;
+}
+
+.delete-icon-chip:hover {
+  opacity: 1;
 }
