--- a/src/app/components/volunteering-domain/volunteering-domain.component.html
+++ b/src/app/components/volunteering-domain/volunteering-domain.component.html
@@ -5,19 +5,27 @@
     <div class="row prograph">
       <div class="col-6">
         <h6>תחומים</h6>
-        <div *ngFor="let item of listDomain">
-
-          <!-- <select class="form-select form-control" aria-label="Default select example">
-            <option selected class="col-6">{{item.domain.description}}</option>
-            <option *ngFor="let item1 of item.volunteerDomain" (click)="selectDomain(item1.code_volunteering)">
-              {{item1.description}}</option> -->
-
+        <!-- <div *ngFor="let item of listDomain">
           <select class="form-select form-control" (change)="selectDomain($event.target.value,item.domain)"
             aria-label="Default select example">
             <option selected>{{item.domain.description}}</option>
             <option *ngFor="let item1 of item.volunteerDomain" [value]="item1.code_volunteering">{{item1.description}}
             </option>
           </select>
+        </div> -->
+        <div class="autocomplete" *ngFor="let item of listDomain">
+          <h6>{{item.domain.description}}</h6>
+          <div class="chips-input-container form-select form-control" (click)="suggest(item)">
+            <div *ngFor="let volunteering of selectedVolunteerings">
+              <span class="user-chip" *ngIf="item.domain.code_domain==volunteering.code_domain">
+                {{volunteering.description}}</span>
+            </div>
+          </div>
+          <div class="autocomplete-items" *ngIf="item.isShow">
+            <div *ngFor="let item1 of item.volunteerDomain"
+              [ngClass]="isVolunteerongSelected(item1) ? 'selected-suggestion' : ''"
+              (click)="selectVolunteering(item1)">{{ item1.description }}</div>
+          </div>
         </div>
       </div>
     </div>
