--- a/src/app/components/app.component.html
+++ b/src/app/components/app.component.html
@@ -2,6 +2,7 @@
     <div class="maim-menu row ">
         <div class="header-img"></div>
         <div class="col-10">
+            <a *ngIf="this.mode=='update'" routerLink="/login">התנתק</a>
             <!-- <a routerLink="/assisted">נעזרים</a>
             <a routerLink="/volunteer" >מתנדבים</a> -->
             <!-- <a routerLink="/volunteering-domain">תחומי התנדבות</a> -->
