--- a/src/app/components/volunteer/volunteer.component.html
+++ b/src/app/components/volunteer/volunteer.component.html
@@ -32,7 +32,7 @@
                     pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,3}$" />
                 <div class="error" *ngIf="ngEmail.invalid&&(ngEmail.touched||ngEmail.dirty)">
                     <i *ngIf="ngEmail.errors!.required">שדה חובה</i>
-                    <i *ngIf="ngEmail.errors!.pattern">אנא הזן כתובת מייל תקינה</i>
+                    <!-- <i *ngIf="ngEmail.errors!.pattern">אנא הזן כתובת מייל תקינה</i> -->
                 </div>
                 <input class="form-control" placeholder="מספר טלפון" type="text" #ngPhone="ngModel"
                     [(ngModel)]="Volunteer.Volunteer.phone" name="phone" required pattern="05?[0-9]-?[0-9]{7}"
